<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/simple_dialog"
            android:text="@string/simple_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_title"
            android:text="@string/simple_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_list"
            android:text="@string/simple_dialog_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_custom_list"
            android:text="@string/simple_dialog_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_multi_list"
            android:text="@string/simple_dialog_list_multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_single_list"
            android:text="@string/simple_dialog_list_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_time"
            android:text="@string/simple_dialog_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_date"
            android:text="@string/simple_dialog_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/simple_dialog_progress"
            android:text="@string/simple_dialog_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/custom_dialog"
                android:text="@string/custom_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
